--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
 <body>
     <div id="container"> 
         <div id="display">12345</div>
-        <button type="button" class="operand" value="1">1</button>
-        <button type="button" class="operand" value="2">2</button>
-        <button type="button" class="operand" value="3">3</button>
-        <button type="button" class="operand" value="4">4</button>
-        <button type="button" class="operand" value="5">5</button>
-        <button type="button" class="operand" value="6">6</button>
-        <button type="button" class="operand" value="7">7</button>
-        <button type="button" class="operand" value="8">8</button>
-        <button type="button" class="operand" value="9">9</button>
-        <button type="button" class="operator" value="+">+</button>
-        <button type="button" class="operator" value="-">-</button>
-        <button type="button" class="operator" value="*">*</button>
-        <button type="button" class="operator" value="/">/</button>
-        <button type="button" class="equals" value="=">=</button>
-        <button type="reset" class="clear" value="clear">AC</button>
+        <div id="values"> 
+            <button type="button" class="operand" value="1">1</button>
+            <button type="button" class="operand" value="2">2</button>
+            <button type="button" class="operand" value="3">3</button>
+            <button type="button" class="operand" value="4">4</button>
+            <button type="button" class="operand" value="5">5</button>
+            <button type="button" class="operand" value="6">6</button>
+            <button type="button" class="operand" value="7">7</button>
+            <button type="button" class="operand" value="8">8</button>
+            <button type="button" class="operand" value="9">9</button>
+            <button type="button" class="operator" value="+">+</button>
+            <button type="button" class="operator" value="-">-</button>
+            <button type="button" class="operator" value="*">*</button>
+            <button type="button" class="operator" value="/">/</button>
+            <button type="button" class="equals" value="=">=</button>
+            <button type="reset" class="clear" value="clear">AC</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
