Remove display placeholder of 12345 values

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="container"> 
-        <div id="display">12345</div>
+        <div id="display"></div>
         <div id="values"> 
             <button type="button" class="operand" value="1">1</button>
             <button type="button" class="operand" value="2">2</button>
