Add decimal point to calculator

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <button type="button" class="operand" value="8">8</button>
             <button type="button" class="operand" value="9">9</button>
             <button type="button" class="operand" value="0">0</button>
+            <button type="button" class="operand" value=".">.</button>
             <button type="button" class="operator" value="+">+</button>
             <button type="button" class="operator" value="-">-</button>
             <button type="button" class="operator" value="*">*</button>
