--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
     <div id="container"> 
         <div id="display"></div>
         <div id="values"> 
+            <button type="reset" class="clear" value="clear">AC</button>
             <button type="button" class="operand" value="1">1</button>
             <button type="button" class="operand" value="2">2</button>
+            <button type="button" class="operator" value="+">+</button>
             <button type="button" class="operand" value="3">3</button>
             <button type="button" class="operand" value="4">4</button>
             <button type="button" class="operand" value="5">5</button>
+            <button type="button" class="operator" value="-">-</button>
             <button type="button" class="operand" value="6">6</button>
             <button type="button" class="operand" value="7">7</button>
             <button type="button" class="operand" value="8">8</button>
+            <button type="button" class="operator" value="*">x</button>
             <button type="button" class="operand" value="9">9</button>
             <button type="button" class="operand" value="0">0</button>
             <button type="button" class="operand" value=".">.</button>
-            <button type="button" class="operator" value="+">+</button>
-            <button type="button" class="operator" value="-">-</button>
-            <button type="button" class="operator" value="*">*</button>
             <button type="button" class="operator" value="/">/</button>
             <button type="button" class="equals" value="=">=</button>
-            <button type="reset" class="clear" value="clear">AC</button>
         </div>
     </div>
     <script src="script.js"></script>
