--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="container"> 
         <div id="display"></div>
         <div id="values"> 
-            <button type="reset" class="clear" value="clear">AC</button>
+            <button type="reset" class="clear" value="c">AC</button>
             <button type="button" class="operand" value="1">1</button>
             <button type="button" class="operand" value="2">2</button>
             <button type="button" class="operator" value="+">+</button>
@@ -21,7 +21,7 @@
             <button type="button" class="operand" value="6">6</button>
             <button type="button" class="operand" value="7">7</button>
             <button type="button" class="operand" value="8">8</button>
-            <button type="button" class="operator" value="*">x</button>
+            <button type="button" class="operator" value="x">x</button>
             <button type="button" class="operand" value="9">9</button>
             <button type="button" class="operand" value="0">0</button>
             <button type="button" class="operand" value=".">.</button>
